--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="anim.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <marquee><h1>My 3D Animation </h1></marquee>
